force-app/main/default/objects/TimeOff__c/TimeOff__c.object-meta.xml
<CustomObject>
    <label>Ausência</label>
    <nameField>
        <displayFormat>F - {000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ausências</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>