force-app/main/default/objects/TimeOff__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allocation</description>
    <inlineHelpText>Allocation</inlineHelpText>
    <label>Allocation</label>
    <referenceTo>Alocation__c</referenceTo>
    <relationshipLabel>Time Off</relationshipLabel>
    <relationshipName>Ausencias</relationshipName>
    <type>Lookup</type>
</CustomField>