force-app/main/default/objects/TimeOff__c/fields/Alocacao__c.field-meta.xml
<CustomField>
    <fullName>Alocacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alocação</label>
    <referenceTo>Alocation__c</referenceTo>
    <relationshipLabel>Ausências</relationshipLabel>
    <relationshipName>Ausencias</relationshipName>
    <type>Lookup</type>
</CustomField>