force-app/main/default/objects/TimeOff__c/fields/ContatoSubstituto__c.field-meta.xml
<CustomField>
    <fullName>ContatoSubstituto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato Substituto</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Ausências (Contato Substituto)</relationshipLabel>
    <relationshipName>Ausencias</relationshipName>
    <type>Lookup</type>
</CustomField>