force-app/main/default/objects/TimeOff__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Employee</description>
    <inlineHelpText>Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Off (Funcionário)</relationshipLabel>
    <relationshipName>Ferias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>