force-app/main/default/objects/TimeOff__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End Date</description>
    <inlineHelpText>End Date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>