force-app/main/default/objects/TimeOff__c/fields/QtdeHorasDia__c.field-meta.xml
<CustomField>
    <fullName>QtdeHorasDia__c</fullName>
    <label>Qtde Horas/Dia</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>