force-app/main/default/objects/TimeOff__c/fields/QTYHourDay__c.field-meta.xml
<CustomField>
    <fullName>QTYHourDay__c</fullName>
    <description>QTY Hour/Day</description>
    <inlineHelpText>QTY Hour/Day</inlineHelpText>
    <label>QTY Hour/Day</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>