force-app/main/default/objects/TimeOff__c/fields/SortOfWithdrawal__c.field-meta.xml
<CustomField>
    <fullName>SortOfWithdrawal__c</fullName>
    <description>Sort of Withdrawal</description>
    <inlineHelpText>Sort of Withdrawal</inlineHelpText>
    <label>Sort of Withdrawal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
                <label>Férias</label>
            </value>
            <value>
                <fullName>Disease</fullName>
                <label>Doença</label>
            </value>
            <value>
                <fullName>Accident at Work</fullName>
                <label>Acidente De Trabalho</label>
            </value>
            <value>
                <fullName>Pregnancy</fullName>
                <label>Maternidade</label>
            </value>
            <value>
                <fullName>Breast-Feeding</fullName>
                <label>Amamentação</label>
            </value>
            <value>
                <fullName>Happy Day</fullName>
            </value>
            <value>
                <fullName>Licença Médica</fullName>
            </value>
            <value>
                <fullName>Ausência Pontual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>