force-app/main/default/objects/TimeOff__c/fields/SubstituteContact__c.field-meta.xml
<CustomField>
    <fullName>SubstituteContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Substitute Contact</description>
    <inlineHelpText>Substitute Contact</inlineHelpText>
    <label>Substitute Contact</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Off (Substitute Contact)</relationshipLabel>
    <relationshipName>Ausencias</relationshipName>
    <type>Lookup</type>
</CustomField>