force-app/main/default/objects/TimeOff__c/fields/VacationDeadline__c.field-meta.xml
<CustomField>
    <fullName>VacationDeadline__c</fullName>
    <label>Data Limite Para Férias</label>
    <type>Date</type>
</CustomField>