force-app/main/default/objects/TimeOff__c/fields/WithdrawalStatus__c.field-meta.xml
<CustomField>
    <fullName>WithdrawalStatus__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnderReview</fullName>
                <label>Em análise</label>
            </value>
            <value>
                <fullName>RequestGranted</fullName>
                <label>Solicitação Atendida</label>
            </value>
            <value>
                <fullName>RequestDenied</fullName>
                <label>Solicitação Negada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>